# esp32c3_quickstart

./: Cargo.toml  README.md
.cargo/: config.toml
src/: init.rs  main.rs  setup.rs  system_status.rs
